manifests/sniffing/sniffer-capture.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: sniffer-capture
  namespace: mapfs
  labels:
    app: sniffer-capture
spec:
  selector:
    matchLabels:
      app: sniffer-capture
  template:
    metadata:
      labels:
        app: sniffer-capture
    spec:
      # Pod comparte red con el host, como network_mode: host en Docker
      hostNetwork: true
      # También es frecuente usar hostPID: true y/o hostIPC: true si hiciera falta
      securityContext:
        runAsUser: 0
      containers:
      - name: sniffer-capture
        image: sniffer-capture:latest
        imagePullPolicy: Never  
        securityContext:
          privileged: true
          capabilities:
            add: ["NET_ADMIN","NET_RAW"]
        volumeMounts:
          - name: shared-data
            mountPath: /shared_data    # Donde guardará los PCAP
          - name: logs
            mountPath: /logs          # Donde guardará logs
      volumes:
          - name: shared-data
            persistentVolumeClaim:
              claimName: sniffer-shared-pvc
          - name: logs
            emptyDir: {}
  updateStrategy:
    type: RollingUpdate
